kubernetes/apps/media/qui/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: qui-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: qui
  oidc:
    provider:
      issuer: "https://id.${SECRET_DOMAIN}"
    clientID: "bacca251-5e41-430f-ae6a-c556df93abc9"
    clientSecret:
      name: qui-oidc-secret
    redirectURL: "https://qui.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/api/auth/logout"
    cookieDomain: "${SECRET_DOMAIN}"
    cookieNames:
      idToken: qui-id-token
      accessToken: qui-access-token
    forwardAccessToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
